# CSV

./: .replit  README.md  advanced_clean.csv  app.py  cleaned_data.csv  cli.py  main.py  nlp_cleaned_data.csv  pyproject.toml  sample_messy_data.csv  setup.py  test_output.csv
attached_assets/: Pasted--Project-Title-Smart-CSV-Cleaner-Hybrid-CLI-Natural-Language-Data-Cleaning-Tool-GOAL--1748880626678.txt
cleaner/: __init__.py  drop_outliers.py  fix_missing.py  fix_names.py  remove_duplicates.py  standardize_types.py  string_cleaner.py
outputs/: annual-enterprise-survey-2023-financial-year-provisional_cleaned.csv.xlsx  annual-enterprise-survey-2023-financial-year-provisional_cleaned.xlsx  laptopData_cleaned.csv
parser/: nlp_parser.py
smart_csv_cleaner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
static/: app.js
templates/: index.html
tests/: test_end_to_end.py  test_fix_names.py  test_missing.py  test_outliers.py  test_parser.py
uploads/: Registration.csv  laptopData_cleaned.csv  laptopData_cleaned.xlsx
utils/: helpers.py  logger.py
