[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "flask>=3.1.1",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "setuptools>=80.9.0",
    "tabulate>=0.9.0",
    "werkzeug>=3.1.3",
]
