[project]
name = "smart-csv-cleaner"
version = "1.0.0"
description = "A powerful Python CLI tool for cleaning messy CSV files with natural language support"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "Smart CSV Cleaner Team", email = "contact@smartcsvcleaner.com" }
]
keywords = ["csv", "data-cleaning", "pandas", "cli", "natural-language", "data-science"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0.0",
    "pandas>=1.3.0",
    "tabulate>=0.8.9",
    "openpyxl>=3.0.0",
    "numpy>=1.20.0",
    "flask>=2.0.0",
    "werkzeug>=2.0.0"
]

[project.urls]
"Homepage" = "https://github.com/your-username/smart-csv-cleaner"
"Bug Reports" = "https://github.com/your-username/smart-csv-cleaner/issues"
"Source" = "https://github.com/your-username/smart-csv-cleaner"

[project.scripts]
clean-csv = "cli:clean_csv"
smart-csv-cleaner = "cli:clean_csv"

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
]
nlp = [
    "spacy>=3.4.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.1/en_core_web_sm-3.4.1.tar.gz",
]
